[package]
name = "incrementaljson"
description = "A wrapper around a file writer that appends json objects to an array in a file"
licence = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.1.0"
authors = ["Drew Cunningham <atacunningham@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
