[package]
name = "incremental-writer"
description = "A wrapper around a file writer that appends json objects to an array in a file"
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.1.2"
authors = ["Drew Cunningham <atacunningham@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/BaronVonDrew/incremental-writer.git"
keywords = ["json", "file-writer", "rolling-file", "io"]
categories = ["filesystem"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]